fix: make cart icon visible by setting span color to white

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -10,6 +10,9 @@ header {
   padding: 0px 10px;
   color: white; /* text color set to white */
 }
+span{
+  color:white
+}
 
 .logo {
   display: flex;
